fixed word-wrap

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -14,4 +14,5 @@ html {
 	margin-bottom: 10px;
 	padding: 5px 20px;
 	color: white;
+	word-wrap: break-word;
 }
